--- a/app/views/sondages/index.html.haml
+++ b/app/views/sondages/index.html.haml
@@ -1,9 +1,5 @@
-%table
-  %tr
-    %th Nom
-    %th Date de publication
- 
-  - @sondages.each do |s|
-    %tr
-      %td= s.nom
-      %td= s.date_publication
+%p Sondage 
+- @sondages.each do |s|
+  %li= s.nom
+  - if s.users.include? current_user
+    DONE
