--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,10 @@ body {
     width: 100%;
     h1 {
       text-align: center;
+      a {
+        text-decoration: none;
+        color: red;
+      }
     }
   }
 }
