--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -52,4 +52,4 @@
 %h3 Annuler mon compte
 %p
   #{button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes vous sûr ?" }, method: :delete}
-= link_to "Retour", :back
+= link_to "Retour", root_path
