--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %title BrAnswers
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
-    %link{"href" => "http://fonts.googleapis.com/css?family=Nothing+You+Could+Do", "rel" => "stylesheet", "type" => "text/css"}
+    %link{"href" => "https://fonts.googleapis.com/css?family=Nothing+You+Could+Do", "rel" => "stylesheet", "type" => "text/css"}
     = csrf_meta_tags
   %body
     .header
