--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -1,22 +1,16 @@
 %h4= @question.valeur
 %br
-= form_tag(sondage_question_reponses_path(@sondage,@question), method: "post") do
   - if @question.choix_multiple
     - @question.choixes.each do |c|
       = check_box_tag(c.id)
       = label_tag(c.id, c.valeur)
       - if @question.champs_libre
-        = text_field_tag("valeur_" + c.id.to_s)
+        = text_field_tag(c.id)
       %br
   - else
     - @question.choixes.each do |c|
       = radio_button_tag(@question.id, c.id)
       = label_tag(@question.id.to_s + "_" + c.id.to_s, c.valeur)
       - if @question.champs_libre
-        = text_field_tag("valeur_" + c.id.to_s)
+        = text_field_tag(c.id)
       %br
-  - if @question == @sondage.questions.last
-    = button_tag("Terminer le sondage")
-  - else
-    = button_tag("Suivant")
-  
