--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,21 +8,23 @@
     %link{"href" => "https://fonts.googleapis.com/css?family=Nothing+You+Could+Do", "rel" => "stylesheet", "type" => "text/css"}
     = csrf_meta_tags
   %body
-    .header
-      %h1
-        = link_to "Beam Rainbow", root_path, class: "rainbow"
-      %p.notice= notice
-      %p.alert= alert
-      %p.navbar
-      - if user_signed_in?
-        Connecté en tant que
-        = succeed "." do
-          %strong= current_user.email
-        = link_to 'Modifier mon profil', edit_user_registration_path
-        |
-        = link_to "Se déconnecter", destroy_user_session_path, method: :delete
-      - else
-        = link_to "S'enregistrer", new_user_registration_path
-        |
-        = link_to "Se connecter", new_user_session_path
-    = yield
+    .container#main-container
+      .header
+        %h1
+          = link_to "Beam Rainbow", root_path, class: "rainbow"
+        - if notice
+          %p.alert.alert-success= notice
+        - if alert
+          %p.alert.alert-warning= alert
+        %p.navbar
+          - if user_signed_in?
+            Connecté en tant que
+            = succeed "." do
+              %strong= current_user.email
+            = link_to 'Profil', edit_user_registration_path, class: 'btn btn-success'
+            = link_to "Déconnexion", destroy_user_session_path, method: :delete, class: 'btn btn-warning'
+          - else
+            = link_to "S'inscrire", new_user_registration_path, class: 'btn btn-success'
+            = link_to "Connexion", new_user_session_path, class: 'btn btn-success'
+      .content
+        = yield
