--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,10 @@ $nprogress-zindex: 10100;
 
 body {
   background: rgb(233, 237, 225);
+  h3 {
+    text-align: center;
+    margin: 30px 0px;
+  }
   .header {
     width: 100%;
     h1 {
@@ -38,7 +42,7 @@ body {
     }
     .navbar {
       float: right;
-      margin-top: -55px;
+      margin-top: -65px;
     }
   }
   .content {
