--- a/app/assets/stylesheets/sondages.scss
+++ b/app/assets/stylesheets/sondages.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the sondages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+ul {
+  display: table;
+  margin: auto;
+  li {
+    margin: 25px !important;
+  }
+  li.disabled a {
+    background: #E4E4E4;
+  }
+}
