--- a/app/views/sondages/index.html.haml
+++ b/app/views/sondages/index.html.haml
@@ -4,10 +4,10 @@
     - if s.questions.count > 0
       - if s.users.include? current_user
         %li.disabled{:role => "presentation"}
-          %a
+          %a.btn-default.btn
             = s.nom
             par
             = s.entreprise.nom
       - else
         %li{:role => "presentation"}
-          = link_to s.nom + " par " + s.entreprise.nom, s
+          = link_to s.nom + " par " + s.entreprise.nom, s, class: "btn-default btn"
