--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,4 +1,4 @@
-%h2 Forgot your password?
+%h3 Réinitialisation du mot de passe
 = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
   = devise_error_messages!
   .field
@@ -6,5 +6,5 @@
     %br/
     = f.email_field :email, autofocus: true
   .actions
-    = f.submit "Réinitialisation du mot de passe"
+    = f.submit "Réinitialiser"
 = render "devise/shared/links"
