--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -23,20 +23,29 @@
     .field
       = f.label :sexe
       %select{:name => "user[sexe]", :id => "user_sexe", :required => "required"}
-        %option
-        %option{:value => "Homme"} Homme
-        %option{:value => "Femme"} Femme
-      %span.current
-        = "Actuel: " + resource.sexe
+        - if resource.sexe == "Homme"
+          %option{:value => "Homme", :selected => ""} Homme
+        - else
+          %option{:value => "Homme"} Homme
+        - if resource.sexe == "Femme"
+          %option{:value => "Femme", :selected => ""} Femme
+        - else
+          %option{:value => "Femme"} Femme
     .field
       = f.label :etat_civil
       %select{:name => "user[etat_civil]", :id => "user_etat_civil", :required => "required"}
-        %option
-        %option{:value => "Célibataire"} Célibataire
-        %option{:value => "Marié(e)"} Marié(e)
-        %option{:value => "Veuf/Veuve"} Veuf/Veuve
-      %span.current
-        = "Actuel: " + resource.etat_civil
+        - if resource.etat_civil == "Célibataire"
+          %option{:value => "Célibataire", :selected => ""} Célibataire
+        - else
+          %option{:value => "Célibataire"} Célibataire
+        - if resource.etat_civil == "Marié(e)"
+          %option{:value => "Marié(e)", :selected => ""} Marié(e)
+        - else
+          %option{:value => "Marié(e)"} Marié(e)
+        - if resource.etat_civil == "Veuve/Veuf"
+          %option{:value => "Veuve/Veuf", :selected => ""} Veuve/Veuf
+        - else
+          %option{:value => "Veuve/Veuf"} Veuve/Veuf
     .field
       = f.label :pop_foyer, "Population foyer"
       = f.number_field :pop_foyer, in: 1.0..200.0
@@ -50,6 +59,5 @@
       = f.label :revenus
       = f.number_field :revenus, min: 0
     .actions
-      = f.submit "Mettre à jour", :class => 'btn btn-success'
-%br
-= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes vous sûr ?" }, method: :delete, :class => 'btn btn-danger'
+      = f.submit "Mettre à jour", :class => 'btn btn-success right'
+      = link_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes vous sûr ?" }, method: :delete, :class => 'btn btn-danger'
