--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-%h2 S'inscrire
+%h3 S'inscrire
 .form_user
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = devise_error_messages!
@@ -9,6 +9,7 @@
       = f.label :password, "Mot de passe"
       = f.password_field :password, autocomplete: "off", :required => "required"
       - if @validatable
+        %br
         %span.current
           #{@minimum_password_length} caractères minimum
     .field
@@ -43,4 +44,4 @@
       = f.label :revenus
       = f.number_field :revenus, in: 0.0..20000000000.0, value: 0, required: "required"
     .actions
-      = f.submit "S'inscrire"
+      = f.submit "S'inscrire", class: "center btn btn-success"
