--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,3 +1,3 @@
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  = link_to "Mot de passe perdu ?", new_password_path(resource_name)
+  = link_to "Mot de passe perdu", new_password_path(resource_name), class: "center btn btn-warning"
   %br/
